--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,13 @@
 /**/
     body{
         background-color: skyblue;
+        border-radius: 20px;
+    }
+
+    button{
+        color: blue;
+        font-family: Times;
+        border-radius: 20px;
     }
 
     #minuteStr {
@@ -26,6 +33,7 @@
         text-align: center;
         position:absolute; top:310px; 
         left:10px; right:10px;
+        font-weight: bold;
     }
     
     #time {
@@ -45,31 +53,20 @@
     }
     
     #btnA {
-        background-color: steelblue;
-        color:blue;
+        background-color: yellow;
+        color: green;
         font-size: 20px;
         position:absolute; top:380px; left:2%; width:43%; height:60px; 
-        font-family: Times;
-        border-radius: 20px;
     }
     
     #btnB {
-        background-color: steelblue;
-        color:blue;
         font-size: 20px;
         position:absolute; top:380px; left:45%; width:25%; height:60px;
-        font-family: Times;
-        border-radius: 20px;
-
     }
 
     #btnC {
-        background-color: steelblue;
-        color:blue;
         font-size: 10px;
         position:absolute; top:380px; left:70%; width:28%; height:60px;
-        font-family: Times;
-        border-radius: 20px;
     }
     
     #minute {
