--- a/www/css/style.css
+++ b/www/css/style.css
@@ -55,25 +55,46 @@
         color: #ffffff;
         font-size: 40px;
         text-align: center;
-        position:absolute; top:10px; 
-        left:10px; right:10px;
+        position:absolute; top:10px; left:100px; right:10px;
     }
     
     #btnA {
-        background-color: yellow;
-        color: green;
+        background-color:#b9e041;
         font-size: 20px;
-        position:absolute; top:380px; left:2%; width:43%; height:60px; 
+        position:absolute; top:380px; left:2%; width:28%; height:60px; 
     }
     
     #btnB {
+        background-color:#b9e041;        
         font-size: 20px;
-        position:absolute; top:380px; left:45%; width:25%; height:60px;
+        position:absolute; top:380px; left:30%; width:28%; height:60px;
     }
 
     #btnC {
-        font-size: 10px;
-        position:absolute; top:380px; left:70%; width:28%; height:60px;
+        background-color:#b9e041;
+        font-size: 20px;
+        position:absolute; top:380px; left:58%; width:42%; height:60px;
+    }
+
+    #btnmap {
+        color:#ff7b00;
+        background-color:#00ffff;
+        font-size: 30px;
+        position:absolute; top:500px; left:0%; width:30%; height:100px;
+    }
+
+    #btnClear {
+        color: blue;
+        background-color:wheat;
+        font-size: 20px;
+        position:absolute; top:500px; left:30%; width:40%; height:100px;
+    }
+
+    #btntime {
+        color:#ff7b00;
+        background-color:#00ffff;
+        font-size: 20px;
+        position:absolute; top:500px; left:70%; width:30%; height:100px;
     }
     
     #minute {
